; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_queuehandler.c_title_add_multiple_are_conflicts.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_queuehandler.c_title_add_multiple_are_conflicts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@.str = private unnamed_addr constant [24 x i8] c"title_add_multiple_list\00", align 1
@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*)* @title_add_multiple_are_conflicts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @title_add_multiple_are_conflicts(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @GHB_WIDGET(i32 %10, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  %12 = call i32* @GTK_LIST_BOX(i32 %11)
  store i32* %12, i32** %4, align 8
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i64 @ghb_array_len(i32 %15)
  store i64 %16, i64* %6, align 8
  store i64 0, i64* %7, align 8
  br label %17

17:                                               ; preds = %43, %1
  %18 = load i64, i64* %7, align 8
  %19 = load i64, i64* %6, align 8
  %20 = icmp slt i64 %18, %19
  br i1 %20, label %21, label %46

21:                                               ; preds = %17
  %22 = load i32*, i32** %4, align 8
  %23 = load i64, i64* %7, align 8
  %24 = call i32* @gtk_list_box_get_row_at_index(i32* %22, i64 %23)
  %25 = call i32* @GTK_WIDGET(i32* %24)
  store i32* %25, i32** %5, align 8
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load i64, i64* %7, align 8
  %30 = call i32 @title_multiple_can_select(i32 %28, i64 %29)
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %38, label %32

32:                                               ; preds = %21
  %33 = load i32*, i32** %5, align 8
  %34 = call i32* @GTK_WIDGET(i32* %33)
  %35 = load i32, i32* @FALSE, align 4
  %36 = call i32 @title_add_multiple_set_sensitive(i32* %34, i32 %35)
  %37 = load i32, i32* @TRUE, align 4
  store i32 %37, i32* %2, align 4
  br label %48

38:                                               ; preds = %21
  %39 = load i32*, i32** %5, align 8
  %40 = call i32* @GTK_WIDGET(i32* %39)
  %41 = load i32, i32* @TRUE, align 4
  %42 = call i32 @title_add_multiple_set_sensitive(i32* %40, i32 %41)
  br label %43

43:                                               ; preds = %38
  %44 = load i64, i64* %7, align 8
  %45 = add nsw i64 %44, 1
  store i64 %45, i64* %7, align 8
  br label %17

46:                                               ; preds = %17
  %47 = load i32, i32* @FALSE, align 4
  store i32 %47, i32* %2, align 4
  br label %48

48:                                               ; preds = %46, %32
  %49 = load i32, i32* %2, align 4
  ret i32 %49
}

declare dso_local i32* @GTK_LIST_BOX(i32) #1

declare dso_local i32 @GHB_WIDGET(i32, i8*) #1

declare dso_local i64 @ghb_array_len(i32) #1

declare dso_local i32* @GTK_WIDGET(i32*) #1

declare dso_local i32* @gtk_list_box_get_row_at_index(i32*, i64) #1

declare dso_local i32 @title_multiple_can_select(i32, i64) #1

declare dso_local i32 @title_add_multiple_set_sensitive(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
